--- a/views/check.html
+++ b/views/check.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="utf-8" />
     <title>Page Title</title>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
 <body>
-    
+    <h1>List</h1>
     <script src="http://localhost:3000/js/main.js"></script>
 </body>
 
